# server/internal/api/room/handler.go
@@ -62,8 +62,8 @@ func (h *RoomHandler) Route(r types.Router) {
 
 	r.With(auth.AdminsOnly).Route("/broadcast", func(r types.Router) {
 		r.Get("/", h.broadcastStatus)
-		r.Post("/start", h.boradcastStart)
-		r.Post("/stop", h.boradcastStop)
+		r.Post("/start", h.broadcastStart)
+		r.Post("/stop", h.broadcastStop)
 	})
 
 	r.With(auth.CanAccessClipboardOnly).With(auth.HostsOnly).Route("/clipboard", func(r types.Router) {
